k3s-userapps/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: kavita
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: kavita
    spec:
      volumes:
        - name: kavita-config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: kavita-media
          persistentVolumeClaim:
            claimName: kavita-media
      containers:
        - image: 'ghcr.io/kareadita/kavita:latest'
          imagePullPolicy: Always
          name: kavita
          ports:
            - containerPort: 5000
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /kavita/config
              name: kavita-config
            - mountPath: /manga
              name: kavita-media
              subPath: manga
            - mountPath: /comics
              name: kavita-media
              subPath: comics
            - mountPath: /books
              name: kavita-media
              subPath: books
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 15
